[gd_scene load_steps=8 format=3 uid="uid://6222mdmvsws4"]

[ext_resource type="Script" path="res://script/flip_card_stand.gd" id="1_dds38"]
[ext_resource type="Texture2D" uid="uid://c5uc0lle6najj" path="res://png/pixelCardAssest_V01.png" id="2_c2iin"]
[ext_resource type="PackedScene" uid="uid://cr6suc7ie8606" path="res://tscn/flip_card.tscn" id="3_d75ci"]

[sub_resource type="Animation" id="Animation_jc55f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_02ugx"]
resource_name = "down"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -100), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_m0qf2"]
resource_name = "up"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.5, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.5, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxamj"]
_data = {
"RESET": SubResource("Animation_jc55f"),
"down": SubResource("Animation_02ugx"),
"up": SubResource("Animation_m0qf2")
}

[node name="flip_card_stand" type="Node2D"]
script = ExtResource("1_dds38")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
region_enabled = true
region_rect = Rect2(252, 223, 96, 29)

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
scale = Vector2(6, 6)
texture = ExtResource("2_c2iin")
region_enabled = true
region_rect = Rect2(252, 223, 96, 29)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rxamj")
}

[node name="Node2D" type="Node2D" parent="."]

[node name="flip_card" parent="Node2D" instance=ExtResource("3_d75ci")]
unique_name_in_owner = true
position = Vector2(-150, 0)

[node name="flip_card2" parent="Node2D" instance=ExtResource("3_d75ci")]
unique_name_in_owner = true

[node name="flip_card3" parent="Node2D" instance=ExtResource("3_d75ci")]
unique_name_in_owner = true
position = Vector2(150, 0)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="fliping" from="Node2D/flip_card" to="." method="_on_flip_card_fliping"]
[connection signal="fliping" from="Node2D/flip_card2" to="." method="_on_flip_card_fliping"]
[connection signal="fliping" from="Node2D/flip_card3" to="." method="_on_flip_card_fliping"]
